# Robo1_HAJE

./: CMakeLists.txt  Detection.cpp  Detection.h  README.md  commands.json  package.xml  setup.cfg  setup.py
config/: drone.rviz  gazebo_bridge.yaml  gazebo_bridge_params.yaml  gazebo_bridge_paramsSPace.yaml  movement_params.yaml
gui/: gui.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_ignition_bringup/share/drone_ignition_bringup/: package.bash  package.zsh
install/robo1_haje/lib/robo1_haje/: Movement  tree_detector
install/robo1_haje/lib/robo1_haje/firerisk/: FireRisk.h
install/robo1_haje/lib/robo1_haje/launch/: drone_ignition.launch.py  drone_navigation.launch.py
install/robo1_haje/lib/robo1_haje/pathplanning/: PathPlanning.cpp
install/robo1_haje/local/lib/python3.10/dist-packages/robo1_haje/: __init__.py  fireRiskCreateMap.py  fireriskMap.py  movement_node.py
install/robo1_haje/local/lib/python3.10/dist-packages/robo1_haje-1.0.3-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/robo1_haje/share/ament_index/resource_index/package_run_dependencies/: robo1_haje
install/robo1_haje/share/ament_index/resource_index/parent_prefix_path/: robo1_haje
install/robo1_haje/share/robo1_haje/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/robo1_haje/share/robo1_haje/cmake/: robo1_hajeConfig-version.cmake  robo1_hajeConfig.cmake
install/robo1_haje/share/robo1_haje/config/: drone.rviz  gazebo_bridge.yaml  movement_params.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
install/robo1_haje/share/robo1_haje/detection/: Detection.h
install/robo1_haje/share/robo1_haje/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robo1_haje/share/robo1_haje/launch/: drone_ignition.launch.py  drone_navigation.launch.py  launch.py  launch_2.py  sim.launch.py
install/robo1_haje/share/robo1_haje/models/bush_3/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/bush_3/meshes/: bush_3.mtl
install/robo1_haje/share/robo1_haje/models/forest_plane/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/forest_wall/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/grass_plane/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/palm_tree/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/palm_tree/meshes/: palm_tree.dae
install/robo1_haje/share/robo1_haje/models/tree_1/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/tree_1/meshes/: tree_1.mtl
install/robo1_haje/share/robo1_haje/models/tree_2/: model.config  model.sdf
install/robo1_haje/share/robo1_haje/models/tree_2/meshes/: tree_2.mtl
install/robo1_haje/share/robo1_haje/movement/: Movement.cpp
install/robo1_haje/share/robo1_haje/pathplanning/: PathPlanning.h
install/robo1_haje/share/robo1_haje/src/: Detection.cpp  Detection.h
install/robo1_haje/share/robo1_haje/urdf/: common_properties.urdf.xacro  drone.gazebo.xacro  drone.urdf.xacro  model.config  model.sdf
install/robo1_haje/share/robo1_haje/urdf/meshes/: hull.dae  propeller_fl.dae  propeller_fr.dae  propeller_rl.dae  propeller_rr.dae
install/robo1_haje/share/robo1_haje/worlds/: large_demo.sdf  simple_trees.sdf
launch/: drone_ignition.launch.py  drone_launchODL.py  launch.py  launch_2.py  launch_drone.launch.py  navigation_drone.launch.py  navigation_drone.py  sim.launch.py  sim.launchOG.py  startup_drone.launch.py  startup_drone.py
log/: latest_build
models/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
models/log/: latest_build
old stuff/: Movement.cpp  Movement.py
robo1_haje/: fireRiskCreateMap.py  fireland_explorer.py  fireriskMap.py  movement_node.py
src/: CMakeLists.txt  Detection.cpp  Detection.h  Movement.cpp  Movement.h  fireRiskgraph.py  fireriskMap.py  fireriskMap2.py  package.xml
src/firerisk/: FireRisk.cpp
src/haje_drone_movement/: package.xml  setup.cfg  setup.py
src/haje_drone_movement/haje_drone_movement/: movement_node (copy).py  movement_node.py  movement_nodeCreditmetish.py  movement_node_creditold.py  movement_nodemovingbackup.py  movement_nodepassmet.py  movement_nodepassmetold.py
src/haje_drone_movement/launch/: movement.launch.py  movement.launch_passmet.py
src/launch/: launch_2.py
src/movement/: Movement.py
src/urdf/: drone.urdf.xacro
srv/: Detection.cpp  fireRiskCreateMap.py
urdf/: drone.gazebo.xacro  drone.urdf.xacro
worlds/: simple_trees.sdf
worlds/models/grass_plane/: model.config
